Closed Bug 759995 Opened 14 years ago Closed 14 years ago

Stop warning on use of the global scope polluter

Categories

(Core :: DOM: Core & HTML, defect)

x86
macOS
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla15

People

(Reporter: bzbarsky, Assigned: bzbarsky)

References

Details

Attachments

(1 file)

The spec requires it, we support it in all modes... I don't see any point to the warning.
I would also be fine with wontfixing this, obviously
Attachment #628603 - Flags: review?(jst)
Assignee: nobody → bzbarsky
Whiteboard: [need review]
Attachment #628603 - Flags: review?(jst) → review+
Flags: in-testsuite?
Target Milestone: --- → mozilla15
Whiteboard: [need review]
Status: NEW → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
Component: DOM → DOM: Core & HTML
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: