Bug 759995.  Stop warning on use of the global scope polluter.  r=jst